[package]
name = "boteco"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
