[package]
name = "boteco"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
