[package]
name = "boteco"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.1"
futures = "0.3.29"
log = "0.4.20"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
